# SocialRobot

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  setup.py
benchmark/: README.md  turtlebot.world  turtlebot_camera.world  turtlebot_pybullet.py  turtlebot_pygazebo.py
examples/: ac_grocery_ground.gin  ac_grocery_ground_img.gin  ac_simple_navigation.gin  balltask_icub_sac.gin  common_nonimage_sac.gin  common_ppo.gin  goaltask_alf_ppo.gin  goaltask_img_ac.gin  goaltask_img_ac_pioneer.gin  goaltask_img_ppo.gin  goaltask_img_ppo_icub.gin  goaltask_img_ppo_pioneer.gin  goaltask_ppo.gin  goaltask_ppo_pioneer.gin  goaltask_sac.gin  goaltask_sac_icub.gin  goaltask_sac_pioneer.gin  grocery_alf_ppo.gin  grocery_alf_sac.gin  grocery_balltask_icub_sac.gin  grocery_balltask_icub_sac.gin~10ee3ff3b01b4545ded7f9d621e71c3595ffcae6  grocery_curiosity_task.gin  grocery_goaltask_img_ac.gin  grocery_goaltask_img_ppo.gin  grocery_goaltask_img_sac.gin  grocery_goaltask_sac.gin  grocery_image_alf_ac.gin  grocery_image_alf_sac.gin  icub_alf_ppo.gin  icub_alf_sac.gin  icubwalk_ppo.gin  icubwalk_sac.gin  pickplace_sac_youbot.gin  ppo_pr2.gin  pr2gripper_img_trac_ppo.gin  pr2gripper_ppo.gin  pr2gripper_sac.gin  reaching3d_sac_kukalwr4.gin  sac_pr2.gin  simple_navigation_ac.gin  (+12 more)
models/: database.config
pygazebo/: CMakeLists.txt  pygazebo.cc  test.py
sim_benchmark/: .gitignore  README.md  turtlebot_pybullet.py  turtlebot_pygazebo.py
social_bot/: CMakeLists.txt  animated_box.cc  independent_listener.cc  integrated_main.cc  social_bot.cc  test.py  test_random_world.py
(+263 files in other folders)
